--- a/samples/Web/Pages/Auth/OAuth/Index.cshtml
+++ b/samples/Web/Pages/Auth/OAuth/Index.cshtml
@@ -19,6 +19,17 @@
 <body>
     <div class="container">
         <h3>Instagram Basic Display API - Redirect Url Page</h3>
+
+        @if(Model.ShowMessage)
+        {
+            <div class="alert alert-warning alert-dismissible fade show" role="alert">
+                <strong>Message:</strong> @Model.Message
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+        }
+
         <div class="lead">
             <p>
                 The  user is sent back to this page on a successful login to instagram with a code and state.
